syntax = "proto3";

package rivet.backend.pkg.upload.prepare;

import "proto/common.proto";
import "proto/backend/upload.proto";

message Request {
	string bucket = 1;
	repeated rivet.backend.upload.PrepareFile files = 2;

	// User ID that created this upload. This is used for reporting purposes
	// in case some bad content was included in the user upload.
	optional rivet.common.Uuid user_id = 3;
}

message Response {
	rivet.common.Uuid upload_id = 1;
	repeated rivet.backend.upload.PresignedUploadRequest presigned_requests = 2;
}
